Perbaikan file dan html serta di subsPage.js

--- a/css/subscribePage.css
+++ b/css/subscribePage.css
@@ -72,7 +72,7 @@
 .content{
    padding: 5% 0;
    /* background-color: #f9b959; */
-   background-image: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), url(assets/subsback.png);
+   background-image: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), url(/assets/subsback.png);
 
 }
 
