--- a/css/homepage.css
+++ b/css/homepage.css
@@ -3,6 +3,10 @@
     padding: 0;
 }
 
+body{
+    width: 100%;
+}
+
 /* Header */
 .header{
     display: flex;
@@ -66,166 +70,109 @@
 #close{
     display: none;
 }
+
 /* content */
-/* banner */
 .hero{
-    background-image: url(assets/aboutBanner.png);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.8)),url(/assets/heroBanner.jpg);
     height: 80vh;
     width: 100%;
     background-size: cover;
+    background-position: center;
     justify-content: center;
     display: flex;
     flex-direction: column;
 }
 
 .hero h1{
-    font-family: 'inter';
-    font-size: 70px;
-    color: #fefefe;
-    padding-left: 35px;
-}
-/*end of banner*/
-
-.content{
-    padding: 5% 0;
-    width: 100%;
-    background-color: #191919;
-}
-
-.containerMain{
-    position: relative;
-    padding: 0 2%;
-    margin: 0 8%;
-}
-
-.containerMain h2{
-    text-align: center;
-    font-family: 'inter';
-    font-size: 35px;
-    color: #fefefe;
-    font-weight: bold;
-    margin-bottom: 2%;
-}
-
-.rowAbt{
-    margin: 0 0 15px;
-    padding: 2% 4%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-}
-
-.descAbt{
-    padding: 0 15px;
-    width: 275px;
-    text-align: justify;
-}
-
-.descAbt h3{
-    font-family: 'inter';
-    display: flex;
-    flex-wrap: wrap;
-    color: #fefefe;
-    margin-bottom: 4px;
-}
-
-.descAbt p{
-    font-family: 'inter';
-    color: #adadad;
-}
-
-.imgAbt{
-    padding: 1%;
-    width: 450px;
-    height: 300px;
-    background-color: #fefefe;
-    box-shadow: 5px 5px 15px rgba(0, 0, 0, 1);
-}
-
-.imgAbt img{ 
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.vision{
-    background: #111111;
-    max-width: 100%;
-    padding: 70px 0 100px;
+    font-family: "Inter";
+    font-size: 100px;
+    font-weight: 700;
+    color: white;
     justify-content: center;
-    align-items: center;
-
+    text-align: center;   
 }
 
-.title2{
-    margin: 10px auto 20px;
+.hero h3{
+    font-family: "inter";
+    font-size: 25px;
+    font-weight: 400;
+    color: white;
+    justify-content: center;
+    font-style: normal;
     text-align: center;
 }
 
-.title2 h2{
-    font-family: 'inter';
-    color: #fefefe;
-    font-size: 50px;
-    
+.banner{
+    background-image: url(/assets/banner.jpg);
+    background-size: cover;
+    background-position: center;
+    height: 80vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
-.container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    max-width: 100%;
-    min-height: 400px;
+.banner h2{
+    font-family: 'inter';
+    font-size:5rem;
+    color: black;
+    padding-top: 7%;
+    padding-left: 65%;
+}
+
+.banner p{
+    font-family: 'inter';
+    font-size: 20px;
+    padding-left: 65%;
 }
 
 .card{
-    height: 375px;
-    width: 335px;
-    padding: 20px 35px;
-    background: #191919;
-    border-radius: 20px;
-    margin: 15px 25px;
-    position: relative;
-    overflow: hidden;
+    margin-top: 5%;
+    margin-bottom: 5%;
+}
+
+.card h2{
+    font-family: 'inter';
+    font-size: 50px;
+    font-weight: 700;
+    color: #000000;
     text-align: center;
+}
+
+.container{
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 5%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.card-box{
     transition: 0.3s;
 }
 
-.card i{
-    font-size: 50px;
-    display: block;
-    text-align: center;
-    margin: 25px 0px;
-    color: #e0c32b;
-}
-
-.card h3{
-    color: #fefefe;
-    font-family: 'inter';
-    font-size: 25px;
-    margin-bottom: 15px;
-}
-
-.card:hover{
+.card-box:hover{
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    transform: scale(1.05);
+    cursor: pointer;
+    transform: scale(1.05);}
+
+.card-box img{
+    width: 100%;
+    height: 55vh;
+    display: flex;
+    transition: 0.3s;
 }
 
-.desc p{
+.card-box h3{
     font-family: 'inter';
-    color: #adadad;
-    line-height: 1.5;
-    font-weight: 100;
+    margin-top: 3%;
+    margin-bottom: 3%;
+    font-size: 18px;
+    text-align: center;
+    background-color: #fff;  
 }
-
-ol li{
-    font-family: 'inter';
-    color: #adadad;
-    line-height: 1.5;
-    font-weight: 100;
-    text-align: left;
-    margin: 15px;
-}
-
 
 /* footer */
 footer{
@@ -309,7 +256,7 @@ footer a{
 footer .copyright{
     width: 100%;
     text-align: center;
-    margin-top: 30px;
+    margin-top: 5px;
 }
 
 .copyright p{
@@ -368,21 +315,5 @@ footer .copyright{
         color: #000;
         visibility: visible;
         font-size: 24px;
-
-
-    }
-
-    .card{
-        height: 450px;
-        width: 335px;
-        padding: 20px 35px;
-        background: #191919;
-        border-radius: 20px;
-        margin: 15px 25px;
-        position: relative;
-        overflow: hidden;
-        text-align: center;
-        transition: 0.3s;
     }
 }
-
